--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -18,6 +18,14 @@
   height: 100%;
   width: 100%;
 }
+.page__list--header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+
 .user__actions--list {
   padding: 3px 0;
   display: flex;
@@ -47,4 +55,22 @@
 .forgot-password-link {
   width: 100%;
   text-align: end;
+}
+
+.page__form--container {
+  font-size: 14px;
+}
+.page__form--header {
+  margin-bottom: 30px;
+  font-size: 16px;
+}
+.page__form--body {
+  border: 1px solid #eee;
+  padding: 15px 20px 30px;
+}
+.page_form-heading {
+  margin-bottom: 30px;
+}
+.ant-form-item-explain-error {
+  font-size: 12px ;
 }
