--- a/front-end/src/pages/User/User.css
+++ b/front-end/src/pages/User/User.css
@@ -1,6 +1,6 @@
-.user__settings-header {
+/* .user__settings-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 15px;
-}
+} */
